BOARD18 1.3.4 Release Notes

Changes from 1.3.3 Release:

Fixed switching between SnapMap and SnapMrk

BOARD18 1.3.3 Release Notes

Changes from 1.3.2 Release:

Put tray back into Market pages.

BOARD18 1.3.2 Release Notes

Changes from 1.3.1 Release:

Fixed Issue 49 - Tokens aren't on Map correctly in Snapshot view

BOARD18 1.3.1 Release Notes

Changes from 1.3.0 Release:
* More issue 10 fixes:
  Add an input box for mobile devices so they can use keyboard shortcuts
  Additional changes to the mobile input box, added versioning to the css files
  Add if you have a token/hex selected and you click outside of the selected 
  area the In-Map menu will be displayed. 
* Fixed Issue 45 - Flipping Token in Stock Market sends it to Top Left corner

BOARD18 1.3.0 Release Notes

Changes from 1.2.2 Release:

* Implemented issue 10 - A number of iPad and Android 
  compatibility issues were fixed. See discussion at 
  http://bugs.board18.org/show_bug.cgi?format=multiple&id=10 
* Implemented issue 27 Phase 3 - board18Games.php.
* Some other minor bug and documentation fixes.

BOARD18 1.2.2 Release Notes

Changes from 1.2.1 Release:

* A "Flip Token" choice will appear as the top choice in
  all applicable context menus. See Issue 36.
* The "select token" menus will show the token choices as
  flipped if they are flipped on the effected hex or box. 
* Text in all context menus has been standardized.
* utility/BOARD18update has been updated to version 3.
* utility/control.sh has been updated to version 3.

BOARD18 1.2.1 Release Notes

Changes from 1.2.0 Release:

* Fixed security vulnerability in board18Players.

BOARD18 1.2.0 Release Notes

Changes from 1.1.5 Release:

* Implemented issue 43 - Increase the maximum size of some  
  fields in the BOARD18 database. If upgrading from a 1.1.x 
  release, please see the notice about database changes at:
  http://wiki.board18.org/w/Two_Table_Fixes_for_release_1.2.x 

* Fixed BOARD18update utility.

BOARD18 1.1.5 Release Notes
