@@ -4,8 +4,6 @@ http://wiki.board18.org/w/How_To_Create_a_BOARD18_WEB_Site
 Usage information, in the form of a Player's Guide" is at
 http://wiki.board18.org/w/User%27s_Guide
 
-Various BOARD18 discussion forums are at http://forum.board18.org/
-
 You can report bugs and make enhancement requests by going to
 http://bugs.board18.org/describecomponents.cgi
 
