@@ -14,6 +14,7 @@ var BD18 = {};
 BD18.noteTimeout = null; // Used by doLogNote().
 BD18.welcomename = null; // Used by doLogNote().
 BD18.help = "http://wiki.board18.org/w/Player%27s_Guide_V1.3";
+BD18.version = "1.4.0";
 
 /* Function setPage() adjusts the height and width
  * of rightofpage and the height of lefttofpage.
@@ -178,4 +179,15 @@ function statswapOK(resp) {
     msg += "Contact the site administrator about this error.";
     alert(msg);
   }
+}
+
+/* Function aboutBoard18 is called from the MAIN menu on
+ * most BOARD18 pages. It displays a popup about message. 
+ */
+function aboutBoard18() {
+  var aboutmsg = 'BOARD18 version ' + BD18.version + '\n';
+  aboutmsg += '\nAN OPEN SOURCE APPLICATION';
+  aboutmsg += '\nCopyright (c) 2013 Richard E. Price';
+  aboutmsg += '\nDistributed under the MIT License';
+  alert(aboutmsg);
 }
