@@ -1,3 +1,11 @@
+BOARD18 1.4.0 Release Notes
+
+Changes from 1.3.4 Release:
+
+Updated game_link table. 
+See http://wiki.board18.org/w/The_game_link_Table_Fix_for_release_1.4.x
+Added aboutBoard18() function to board18com.js.
+
 BOARD18 1.3.4 Release Notes
 
 Changes from 1.3.3 Release:
